# TicTacToe-MiniMax

./: .gitignore  AI.cpp  AI.h  CMakeLists.txt  Frame.cpp  Frame.h  GameHandler.cpp  GameHandler.h  MainClass.cpp  MainClass.h  MainWindow.cpp  MainWindow.h  MiniMax.cpp  MiniMax.h  README.md  main.cpp
